--- a/src/Page/MyAccount/MyAccountPage.js.style.css
+++ b/src/Page/MyAccount/MyAccountPage.js.style.css
@@ -1,3 +1,36 @@
+.fieldRoot {
+  padding-top: 90px;
+}
 
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-flow: row wrap;
+  padding-top: 40px;
+}
+.buttonContainer .button-1 {
+  margin-right: 20px;
+}
+
+.cardRoot {
+  max-width: 345px;
+  margin-top: 20px;
+}
+
+.my-account-title {
+  width: 100vw;
+  height: 4vw;
+  border: 1px dotted darkgrey;
+  display: flex;
+  border-radius: 0.2vw;
+  padding-left: 20px;
+  justify-content: center;
+  flex-direction: column;
+  font-family: "Play", sans-serif;
+}
+.my-account-title .title {
+  font-size: 1vw;
+}
 
 /*# sourceMappingURL=MyAccountPage.js.style.css.map */
