--- a/src/Component/DrawerMenu/Menu.style.scss
+++ b/src/Component/DrawerMenu/Menu.style.scss
@@ -2,4 +2,13 @@
   text-decoration: none;
   color: black;
   font-weight: bold;
+
+  .list-item{
+
+    .title{
+      font-family: 'Play', sans-serif;
+      font-size: 18px;
+      color: azure;
+    }
+  }
 }
