--- a/src/Page/SignAndSigOut/SignAndSigout.style.css
+++ b/src/Page/SignAndSigOut/SignAndSigout.style.css
@@ -1,22 +1,12 @@
-.root {
-  height: 100vh;
+.container {
+  height: 80vh;
   display: flex;
-  justify-content: flex-end;
-}
-.root .right {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  border-bottom: 1px dotted lightgrey;
 }
-.root .left {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.root .left .inner-left {
-  height: 20vw;
-  background-color: azure;
+.container .form-container {
+  width: 40vw;
 }
 
 /*# sourceMappingURL=SignAndSigout.style.css.map */
