--- a/src/Page/SignAndSigOut/SignAndSigout.style.scss
+++ b/src/Page/SignAndSigOut/SignAndSigout.style.scss
@@ -1,22 +1,35 @@
-.root{
-  height: 100vh;
+//.root{
+//  height: 100vh;
+//  display: flex;
+//  justify-content: flex-end;
+//
+//  .right{
+//    min-height: 100%;
+//    display: flex;
+//    flex-direction: column;
+//    justify-content: center;
+//  }
+//  .left{
+//    display: flex;
+//    flex-direction: column;
+//    justify-content: center;
+//
+//    .inner-left{
+//      height: 20vw;
+//      background-color: azure;
+//    }
+//  }
+//}
+
+.container{
+  height: 80vh;
   display: flex;
-  justify-content: flex-end;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px dotted lightgrey;
 
-  .right{
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .left{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 
-    .inner-left{
-      height: 20vw;
-      background-color: azure;
-    }
+  .form-container{
+      width: 40vw;
   }
 }
