login formpage update

--- a/src/Component/SignIn/SignIn.style.css
+++ b/src/Component/SignIn/SignIn.style.css
@@ -1,7 +1,10 @@
 .card-container {
   padding: 5%;
   border-radius: 0;
-  min-height: 15vw;
+  background: #CFCFCF;
+  background: -webkit-linear-gradient(top right, #CFCFCF, #DEECFF);
+  background: -moz-linear-gradient(top right, #CFCFCF, #DEECFF);
+  background: linear-gradient(to bottom left, #CFCFCF, #DEECFF);
 }
 
 .field-container {
@@ -25,9 +28,16 @@
 .forgot-pass {
   margin-top: 1vh;
   align-self: flex-end;
-  color: green;
+  color: black;
   text-decoration: none;
   font-style: italic;
+}
+
+.demo {
+  background: #23303F;
+  background: -webkit-linear-gradient(top right, #23303F, #546782);
+  background: -moz-linear-gradient(top right, #23303F, #546782);
+  background: linear-gradient(to bottom left, #23303F, #546782);
 }
 
 /*# sourceMappingURL=SignIn.style.css.map */
