--- a/src/Component/SignIn/SignIn.style.scss
+++ b/src/Component/SignIn/SignIn.style.scss
@@ -4,7 +4,10 @@
 .card-container{
   padding: 5%;
   border-radius: 0;
-  min-height: 15vw;
+  background: #CFCFCF;
+  background: -webkit-linear-gradient(top right, #CFCFCF, #DEECFF);
+  background: -moz-linear-gradient(top right, #CFCFCF, #DEECFF);
+  background: linear-gradient(to bottom left, #CFCFCF, #DEECFF);
 
 
 }
@@ -13,12 +16,12 @@
   flex-direction: column;
 
 
+
 }
 .button-container-1{
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-
 
   .button-container{
     width: 20vh;
@@ -31,7 +34,14 @@
 .forgot-pass{
   margin-top: 1vh;
   align-self: flex-end;
-  color: green;
+  color: black;
   text-decoration: none;
   font-style: italic;
+}
+
+.demo{
+  background: #23303F;
+  background: -webkit-linear-gradient(top right, #23303F, #546782);
+  background: -moz-linear-gradient(top right, #23303F, #546782);
+  background: linear-gradient(to bottom left, #23303F, #546782);
 }
